@@ -1,3 +1,12 @@
+2014-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	patch #8437: [PATCH] Serial-over-ethernet for Win32
+	* configure.ac: Check for ws2_32 library
+	* ser_win32.c: Add hooks for forwarding serial data over
+	TCP connections
+	* avrdude.1: Drop previous restriction of -P net:
+	* doc/avrdude.conf: (Dito.)
+
 2014-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	bug #42908: no external reset at JTAGICE3
